package com.example.hexchess.backend.onlinegame

class Piece (
    var color: PieceColor,
    var type: PieceType,
    var isFirstTurn: Boolean,
    var isBlocked: Boolean = false
)