package com.example.hexchess.backend.onlinegame

enum class PieceType {
    King,
    Queen,
    Rook,
    Bishop,
    Knight,
    Pawn,
}

enum class PieceColor {
    White,
    Black
}